@@ -4,6 +4,8 @@ cupt (2.0.2~) UNRELEASED; urgency=low
     - download/methodfactory:
       - Don't try to unload a module twice if it was loaded successfully but
         no needed symbols were found.
+    - download/uri:
+      - Correctly handle URIs with tree slashes, such as 'file:///...'.
   * doc:
     - reference:
       - 'File::getBlock': documented an output value of the 'size' parameter.
